--- a/pages/index.html
+++ b/pages/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                Made by <a class="brown-text text-lighten-3" href="https://github.com/sarahalkhater" target="_blank">Sarah</a>
             </div>
         </div>
     </footer>
